# cgen

./: .gitignore  CMakeLists.txt  README.md  __vector_8h.html  __vector_8h__incl.map  __vector_8h__incl.md5  __vector_8h_source.html  all.c  all.h  all_8h_source.html  annotated.html  arr.h  arr_8h_source.html  bench_8h.html  bench_8h__incl.map  bench_8h__incl.md5  bench_8h_source.html  bn.h  bn_8h.html  bn_8h__dep__incl.map  bn_8h__dep__incl.md5  bn_8h__incl.map  bn_8h__incl.md5  bn_8h_source.html  bns.h  bns_8h_source.html  bs_8h_source.html  bst.c  cgen.h  cgen.hc  cgen.ic  cgen_8h_source.html  classes.html  core.h  core_8h.html  core_8h__dep__incl.map  core_8h__dep__incl.md5  core_8h__incl.map  core_8h__incl.md5  core_8h_source.html  (+357 more)
OOP/: Sll.c  (+2 more)
examples/: CMakeLists.txt  dll_songs.c  gtype_demo_io.c  gtype_demo_io.txt  s2i_pprint.c  s2i_pprint_custom.c  str_id.c  str_id.txt
examples/OOP/: CMakeLists.txt  SllDemo.c  SllGDemo.c  SllStr.c
examples/arr/: CMakeLists.txt  arr_i_demo.c  arr_setsize_demo.c
examples/benchmarks/: CMakeLists.txt  bench.h
examples/bns/: CMakeLists.txt  bns_demo_with_type_double.c
examples/bs/: CMakeLists.txt  bs_demo_with_type_double.c
examples/deb/: CMakeLists.txt
examples/ext/: CMakeLists.txt  cgetline.c  cgetline_buffsize.c  cgetline_demo.c  cstrdup_demo.c
examples/gc/: CMakeLists.txt  gvec_gc_demo.c
examples/gsl/: CMakeLists.txt  gsl_demo.c  gsl_demo.txt
examples/gtype/: CMakeLists.txt  gtype_demo.c
examples/gvec/: CMakeLists.txt  gvec_clear_demo.c  gvec_demo.c  gvec_i_demo.c  gvec_pp_demo.c  gvec_pp_demo.txt  gvec_s_demo.c
examples/hf/: CMakeLists.txt  hgen_demo.c
examples/hfunc/: CMakeLists.txt  hgen_demo.c
examples/hm/: hgen_demo.c
examples/hmap/: CMakeLists.txt  hmap_clear_demo.c  hmap_demo.c
examples/hset/: CMakeLists.txt  hset_clear_demo.c  hset_demo.c
examples/p1w/: CMakeLists.txt  p1wi_clear_demo.c  p1wi_demo.c  p1wi_root.c
examples/rbm/: CMakeLists.txt  rbm_clear_demo.c  rbm_rgb_rand_demo.c  rbm_si_demo.c  rbm_tf_cf_demo.c
examples/rbs/: CMakeLists.txt  rbs_clear_demo.c  rbs_demo.c
examples/system/: system_gvec_demo.c
examples/tm/: CMakeLists.txt  tm_si_demo.c
examples/utils/: CMakeLists.txt  cgetline_buffsize.c  cgetline_demo.c  cgetline_demo.txt  cstrdup_demo.c
learning/vec/: CMakeLists.txt  README.md  b01_read_double_ut.c  b01_solve.c  b02_max_d_ut.c  b02_min_l_ut.c  b02_revert_ut.c  b02_solve.c  b02_solve.h  read_double.txt  read_lines.txt
meta/: CMakeLists.txt  all.h  combine.sh
meta/algo/: algo.h
meta/all/: cgen.c  cgen.h
meta/base/: core.h  fnt.h  gtype.h
meta/cont/: slist.h  tmap.h  vector.h
meta/tests/: CMakeLists.txt  helpers.h
tests/: CMakeLists.txt  helpers.h  utils.h
tests/arr/: CMakeLists.txt  arr_assign_max_ut.c  arr_assign_min_ut.c  arr_fill_ut.c  arr_i_ut.c  arr_push_back_gtype_ut.c  arr_push_back_str_ut.c  arr_qsort_long_ut.c  arr_s13_ut.c  arr_size_cap_grow_ut.c  arr_traverse_ut.c
tests/base/: bn_utils.h  helpers.h  rands.h  utils.h
tests/bn/: CMakeLists.txt  bn_edge_height_ut.c  bn_foreach_ut.c  bn_helper.h  bn_insert_ut.c  bn_most_ut.c  bn_next_prev_inorder_ut.c  bn_same_tree_ut.c  bn_similar_tree_ut.c  bn_transplant_ut.c  bns_search_ut.c
tests/bns/: CMakeLists.txt  bns_gtype_helper.h  bns_gtype_i_ut.c  bns_search_gte_ut.c  bns_search_lte_gte_1k_ut.c  bns_search_lte_gte_g_ut.c  bns_search_lte_ut.c  bns_search_ut.c
tests/bs/: CMakeLists.txt  bs_gtype_helper.h  bs_gtype_i_ut.c  bs_search_gte_ut.c  bs_search_lte_gte_1k_ut.c  bs_search_lte_gte_g_ut.c  bs_search_lte_ut.c  bs_search_ut.c
tests/cgen/: CMakeLists.txt  bnear_search_demo.c  bsearch_demo.c  comb_demo.c  map_of_vector.c  max_heap_int_demo.c  perm_demo.c  qsort_demo.c  si_demo.c  si_demo_full.c  tmap_kv_demo.c  topk_demo.c  vec_stack_demo.c
tests/cont/: CMakeLists.txt  map_of_vector.c  slist_int_queue_demo.c  tmap_rand_insert_delete_ut.c
tests/dll/: CMakeLists.txt  dll_generic_ut.c  dll_gtype_ut.c  dll_int_ut.c  helper.h
tests/gsl/: CMakeLists.txt  gsl_inserta_ut.c  helper.h
tests/gt_list1/: gt_list1_ut.c
tests/gtl1/: gt_list1_ut.c
tests/gtlist1/: CMakeLists.txt
tests/gttreemap/: CMakeLists.txt  gt_treemap_ut.c
tests/gtv/: CMakeLists.txt  ivec_push_back_ut.c  push_back_ut.c  size_cap_grow_ut.c  svec_push_back_ut.c
tests/gtvector/: CMakeLists.txt  ivec_push_back_ut.c  push_back_ut.c  size_cap_grow_ut.c  svec_push_back_ut.c
tests/gvec/: CMakeLists.txt  gvec_bubsort_ut.c  gvec_create_full_ut.c  gvec_fill_ut.c  gvec_insort_ut.c  gvec_mem_resize_ut.c  gvec_selsort_ut.c  gvec_ut.c  gvec_v_ut.c  helper.h
tests/hmap/: CMakeLists.txt  hmap_free0_ut.c  hmap_gvec_ut.c  hmap_hmap_ut.c  hmap_nnode_ut.c  hmap_put_si_ut.c  hmap_randi_ut.c  hmap_small_ut.c
tests/hset/: CMakeLists.txt  hset_rand_ut.c  hset_ut.c
tests/iqueue/: CMakeLists.txt
tests/istack/: CMakeLists.txt  istack_ut.c
tests/list1/: CMakeLists.txt  gt_list1_ut.c  iqueue_ut.c  istack_ut.c  list1_t.c
tests/mylib/: gtype.h  lib.c
tests/p1w/: CMakeLists.txt  p1w_ut.c
tests/p2w/: CMakeLists.txt  d2wheap_ut.c  gtp2wheap_ut.c
tests/priority/: CMakeLists.txt
tests/que/: CMakeLists.txt  que_simple_ut.c
tests/rb/: CMakeLists.txt  bn_left_rotate_ut.c  rb_build_ut.c  rb_delete_similar_ut.c  rb_delete_ut.c  rb_helper.h  rb_insert_delete_1k_ut.c  rb_insert_delete_duplicates_ut.c  rb_insert_delete_ut.c  rb_is_valid_ut.c  rb_rand_insert_delete_ut.c  rbi.h  rbi_helper.h
tests/rbm/: CMakeLists.txt  rbm_gvec_ut.c  rbm_hmap_ut.c  rbm_put_si_ut.c  rbm_rand_i_ut.c
tests/rbs/: CMakeLists.txt  rbs_helper.h  rbs_i_ut.c  rbs_rand_ut.c  rbs_str_ut.c
tests/s2i/: CMakeLists.txt  s2i_insert_dup_ut.c  s2i_set_dup_ut.c  s2i_ut.c  s2i_ut2.c
tests/s2w/: CMakeLists.txt  s2w_ut.c
tests/sll/: CMakeLists.txt  gsl_ut.c  iqueue_ut.c  sll_g_ut.c  sll_l_queue_ut.c  sll_l_stack_ut.c  sll_ut.c
tests/sort/: CMakeLists.txt  heapsort_ut.c  q2m3sort_ut.c  q2sort_ut.c  q3sort_ut.c  quicksort_ut.c  (+1 more)
v2/: CMakeLists.txt  README.md  all.c  all.h  combine.sh
v3/: CMakeLists.txt  algo.h  arr.h  bst.h  dlist.h  hmap.h  slist.h  tmap.h  tnav.h  vec.h
(+547 files in other folders)
