cmake_minimum_required(VERSION 2.8)
project(cgen)

# ON by default, use -DNOWARN=ON/OFF in Cmake command to turn ON/OFF
option(NOWARN "ON-No warnings, OFF-Tend to show all warnings" ON)

include_directories(${CMAKE_CURRENT_SOURCE_DIR})

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g")

if (NOWARN)
  MESSAGE(STATUS "cgen no warnings")
  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -w")
else(NOWARN)
  MESSAGE(STATUS "cgen all warnings")
  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall")
endif()

add_subdirectory(tests)
add_subdirectory(examples)

add_library(bkc STATIC all.c)

include(CTest)
add_test(NAME BNLeftRotate COMMAND bn_left_rotate_ut)
add_test(NAME RBInsertDelete COMMAND rb_insert_delete_ut)
add_test(NAME BNMost COMMAND bn_most_ut)
add_test(NAME BNTransplant COMMAND bn_transplant_ut)
add_test(NAME BNSSearch COMMAND bns_search_ut)
add_test(NAME BNNextPrevInorder COMMAND bn_next_prev_inorder_ut)
add_test(NAME BNForeach COMMAND bn_foreach_ut)
add_test(NAME S2I COMMAND s2i_ut)
add_test(NAME S2I2 COMMAND s2i_ut2)
add_test(NAME GtvSizeCapGrow COMMAND gtv_size_cap_grow_ut)
add_test(NAME GtvPushBack COMMAND gtv_push_back_ut)
add_test(NAME SVecPushBack COMMAND svec_push_back_ut)
add_test(NAME SLL COMMAND sll_ut)
add_test(NAME SLL_G COMMAND sll_g_ut)
add_test(NAME IVecPushBack COMMAND ivec_push_back_ut)
add_test(NAME SLL_L_Queue COMMAND sll_l_queue_ut)
add_test(NAME SLL_L_Stack COMMAND sll_l_stack_ut)
add_test(NAME GTP2WHeap COMMAND gtp2wheap_ut)
add_test(NAME D2WHeap COMMAND d2wheap_ut)
add_test(NAME GTTreeMap COMMAND gt_treemap_ut)
add_test(NAME RBBuild COMMAND rb_build_ut)
add_test(NAME RBDelete COMMAND rb_delete_ut)
add_test(NAME BNSimilarTree COMMAND bn_similar_tree_ut)
add_test(NAME RBIsValid COMMAND rb_is_valid_ut)
add_test(NAME RBDeleteSimilar COMMAND rb_delete_similar_ut)
add_test(NAME RBInsertDelete1K COMMAND rb_insert_delete_1k_ut)
add_test(NAME RBRandInsertDelete COMMAND
                rb_rand_insert_delete_ut 10000 1000)
add_test(NAME RBInsertDeleteDuplicates COMMAND
                rb_insert_delete_duplicates_ut)
add_test(NAME S2IInsertDup COMMAND s2i_insert_dup_ut)
add_test(NAME S2ISetDup COMMAND s2i_set_dup_ut)
add_test(NAME BNSSearchGTE COMMAND bns_search_gte_ut)
add_test(NAME BNSSearchLTE COMMAND bns_search_lte_ut)
add_test(NAME BNSSearchLteGte1K COMMAND bns_search_lte_gte_1k_ut)
add_test(NAME DLLGeneric COMMAND dll_generic_ut)
add_test(NAME DLLInt COMMAND dll_int_ut)
add_test(NAME DLLGtype COMMAND dll_gtype_ut)
add_test(NAME BNSGtypeI COMMAND bns_gtype_i_ut)
add_test(NAME BNEdgeHeight COMMAND bn_edge_height_ut)
add_test(NAME BNGenericInsert COMMAND bn_insert_ut)
add_test(NAME BNSSearchLteGteGtype COMMAND bns_search_lte_gte_g_ut)
add_test(NAME ArrIUt COMMAND arr_i_ut)
add_test(NAME RbsIUt COMMAND rbs_i_ut)
add_test(NAME P1W COMMAND p1w_ut)
add_test(NAME HMapSmallUt COMMAND hmap_small_ut)
add_test(NAME HMapNnodeUt COMMAND hmap_nnode_ut)
add_test(NAME HMapRandiUt COMMAND hmap_randi_ut)
add_test(NAME ArrS13Ut COMMAND arr_s13_ut)
add_test(NAME GvecUT COMMAND gvec_ut)
add_test(NAME HashSetUT COMMAND hset_ut)
add_test(NAME HashMapFree0UT COMMAND hmap_free0_ut)
add_test(NAME HashSetRandUT COMMAND hset_rand_ut)
add_test(NAME GvecVoidUT COMMAND gvec_v_ut)
add_test(NAME SpacesUT COMMAND spaces_ut)
add_test(NAME SplitUT COMMAND split_ut)
add_test(NAME RbsStrUt COMMAND rbs_str_ut)
add_test(NAME RbmRandiUt COMMAND rbm_rand_i_ut 1000)
add_test(NAME RbsRandUt COMMAND rbs_rand_ut 1000)
add_test(NAME HmapGvec COMMAND hmap_gvec_ut)
add_test(NAME HmapHmap COMMAND hmap_hmap_ut)
add_test(NAME RbmGvec COMMAND rbm_gvec_ut)
add_test(NAME RbmHmap COMMAND rbm_hmap_ut)