add_executable(str_id str_id.c)
add_executable(s2i_pprint s2i_pprint.c)
add_executable(s2i_pprint_custom s2i_pprint_custom.c)
add_executable(songs_list dll_songs.c)
add_executable(gtype_demo_io gtype_demo_io.c)

foreach (p str_id s2i_pprint s2i_pprint_custom)
 target_link_libraries(${p} bkc)
endforeach()

add_subdirectory(benchmarks)
add_subdirectory(ext)
add_subdirectory(OOP)
add_subdirectory(bns)
add_subdirectory(arr)
add_subdirectory(tm)