add_executable(rbm_si_demo rbm_si_demo.c)
add_executable(rbm_rgb_rand_demo rbm_rgb_rand_demo.c)
add_executable(rbm_tf_cf_demo rbm_tf_cf_demo.c)
add_executable(rbm_clear_demo rbm_clear_demo.c)
foreach (p rbm_si_demo rbm_rgb_rand_demo rbm_tf_cf_demo rbm_clear_demo)
  target_link_libraries(${p} bkcgen)
endforeach()