add_executable(arr_i_ut arr_i_ut.c)
add_executable(arr_s13_ut arr_s13_ut.c)
add_executable(arr_qsort_long_ut arr_qsort_long_ut.c)
add_executable(arr_traverse_ut arr_traverse_ut.c)
add_executable(arr_fill_ut arr_fill_ut.c)
add_executable(arr_assign_max_ut arr_assign_max_ut.c)
add_executable(arr_assign_min_ut arr_assign_min_ut.c)