include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../all)
add_executable(si_demo si_demo.c)
add_executable(si_demo2 si_demo2.c)
add_executable(si_demo_full si_demo_full.c)
add_executable(list_stack_queue_demo list_stack_queue_demo.c)
add_executable(vec_stack_demo vec_stack_demo.c)
add_executable(qsort_demo qsort_demo.c)
add_executable(bsearch_demo bsearch_demo.c)
add_executable(max_heap_int_demo max_heap_int_demo.c)
add_executable(perm_demo perm_demo.c)
add_executable(comb_demo comb_demo.c)
add_executable(map_of_vector map_of_vector.c)
add_executable(tmap_kv_demo tmap_kv_demo.c)