set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g")
add_executable(ivec_ut ivec_ut.c)
add_executable(heap_sort_ut heap_sort_ut.c)
add_executable(q2insort_ut q2insort_ut.c)
add_executable(binsearch_ut binsearch_ut.c)
add_executable(hmap_demo_ut hmap_demo_ut.c)
add_executable(hmap_trav_demo_ut hmap_trav_demo_ut.c)
add_executable(ivec_sort_ut ivec_sort_ut.c)
add_executable(ivec_put_rem_demo_ut ivec_put_rem_demo_ut.c)
add_executable(slist_demo_ut slist_demo_ut.c)
add_executable(slist_ins_del_ut slist_ins_del_ut.c)
add_executable(tmap_demo_ut tmap_demo_ut.c)
add_executable(bst_demo_ut bst_demo_ut.c)
add_executable(tmap_str_int_rand_ut tmap_str_int_rand_ut.c)
add_executable(dlist_demo_ut dlist_demo_ut.c)